mdapipkg/unpackaged/objects/EinsteinAnalyticsEvent__e.object
<CustomObject>
    <fields>
        <fullName>payload__c</fullName>
        <description>The JSON payload to send to the target. For filters and selections this will be the standard EA format. For steps, refresh, etc., this will likely be specific to this POC. Refer to the source code for details and examples.</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>target__c</fullName>
        <description>One or more identifiers (IDs, names, etc.) to receive the event, comma separated.</description>
        <label>Target</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>The type of the event to allow the EA assets to respond accordingly.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EinsteinAnalyticsEvent</label>
    <pluralLabel>EinsteinAnalyticsEvents</pluralLabel>
</CustomObject>